--- a/AlgorithmGossip/MatchString.htm
+++ b/AlgorithmGossip/MatchString.htm
@@ -21,14 +21,14 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
   
   
   
-  <title>¦r¦ê®Ö¹ï</title>
+  <title>å­—ä¸²æ ¸å°</title>
 </head>
 
 
@@ -41,27 +41,27 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ¦r¦ê®Ö¹ï</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: å­—ä¸²æ ¸å°</a></h1>
 
 
 
-<h2>&nbsp;»¡©ú</h2>
-¤µ¤éªº¤@¨Ç°ª¶¥µ{¦¡»y¨¥¹ï©ó¦r¦êªº³B²z¤ä´©¶V¨Ó¶V±j¤j¡]¨Ò¦pJava¡BPerlµ¥¡^¡A¤£¹L¦r¦ê·j´M¥»¨­¤´¬O­Ó­È±o±´°Qªº½ÒÃD¡A¦b³oÃä¥HBoyer- Mooreªk¨Ó»¡©ú¦p¦ó¶i¦æ¦r¦ê»¡©ú¡A³o­Ó¤èªk§Ö¥B­ì²zÂ²¼ä©öÀ´¡C<br>
-<h2>¸Ñªk</h2>
-¦r¦ê·j´M¥»¨­¤£Ãø¡A¨Ï¥Î¼É¤Oªk¤]¥i¥H¨D¸Ñ¡A¦ı¦p¦ó§Ö³t·j´M¦r¦ê´N¤£Â²³æ¤F¡A¶Ç²Îªº¦r¦ê·j´M¬O±qÃöÁä¦r»P¦r¦êªº¶}ÀY¶}©l¤ñ¹ï¡A¨Ò¦p <a href="http://www.ics.uci.edu/%7Eeppstein/161/960227.html">Knuth-Morris-Pratt ºtºâªk</a> ¦r¦ê·j´M¡A³o­Ó¤èªk¤]¤£¿ù¡A¤£¹L­nªá®É¶¡¦b¤½¦¡­pºâ¤W¡FBoyer-Moore¦r¦ê®Ö¹ï§ï¥ÑÃöÁä¦rªº«á­±¶}©l®Ö¹ï¦r¦ê¡A¨Ã»s§@«e¶iªí¡A¦pªG¤ñ¹ï¤£²Å¦X«h¨Ì«e¶iªí¤¤ªº­È«e¶i¦Ü¤U¤@­Ó®Ö¹ï³B¡A°²³]¬Op¦n¤F¡AµM«á¤ñ¹ï¦r¦ê¤¤p-n+1¦Üpªº­È¬O§_»PÃöÁä¦r¬Û¦P¡C <br>
-<div style="text-align: center;"><img style="width: 271px; height: 87px;" alt="¦r¦ê®Ö¹ï" title="¦r¦ê®Ö¹ï" src="images/matchString-1.jpg"><br>
+<h2>&nbsp;èªªæ˜</h2>
+ä»Šæ—¥çš„ä¸€äº›é«˜éšç¨‹å¼èªè¨€å°æ–¼å­—ä¸²çš„è™•ç†æ”¯æ´è¶Šä¾†è¶Šå¼·å¤§ï¼ˆä¾‹å¦‚Javaã€Perlç­‰ï¼‰ï¼Œä¸éå­—ä¸²æœå°‹æœ¬èº«ä»æ˜¯å€‹å€¼å¾—æ¢è¨çš„èª²é¡Œï¼Œåœ¨é€™é‚Šä»¥Boyer- Mooreæ³•ä¾†èªªæ˜å¦‚ä½•é€²è¡Œå­—ä¸²èªªæ˜ï¼Œé€™å€‹æ–¹æ³•å¿«ä¸”åŸç†ç°¡æ½”æ˜“æ‡‚ã€‚<br>
+<h2>è§£æ³•</h2>
+å­—ä¸²æœå°‹æœ¬èº«ä¸é›£ï¼Œä½¿ç”¨æš´åŠ›æ³•ä¹Ÿå¯ä»¥æ±‚è§£ï¼Œä½†å¦‚ä½•å¿«é€Ÿæœå°‹å­—ä¸²å°±ä¸ç°¡å–®äº†ï¼Œå‚³çµ±çš„å­—ä¸²æœå°‹æ˜¯å¾é—œéµå­—èˆ‡å­—ä¸²çš„é–‹é ­é–‹å§‹æ¯”å°ï¼Œä¾‹å¦‚ <a href="http://www.ics.uci.edu/%7Eeppstein/161/960227.html">Knuth-Morris-Pratt æ¼”ç®—æ³•</a> å­—ä¸²æœå°‹ï¼Œé€™å€‹æ–¹æ³•ä¹Ÿä¸éŒ¯ï¼Œä¸éè¦èŠ±æ™‚é–“åœ¨å…¬å¼è¨ˆç®—ä¸Šï¼›Boyer-Mooreå­—ä¸²æ ¸å°æ”¹ç”±é—œéµå­—çš„å¾Œé¢é–‹å§‹æ ¸å°å­—ä¸²ï¼Œä¸¦è£½ä½œå‰é€²è¡¨ï¼Œå¦‚æœæ¯”å°ä¸ç¬¦åˆå‰‡ä¾å‰é€²è¡¨ä¸­çš„å€¼å‰é€²è‡³ä¸‹ä¸€å€‹æ ¸å°è™•ï¼Œå‡è¨­æ˜¯på¥½äº†ï¼Œç„¶å¾Œæ¯”å°å­—ä¸²ä¸­p-n+1è‡³pçš„å€¼æ˜¯å¦èˆ‡é—œéµå­—ç›¸åŒã€‚ <br>
+<div style="text-align: center;"><img style="width: 271px; height: 87px;" alt="å­—ä¸²æ ¸å°" title="å­—ä¸²æ ¸å°" src="images/matchString-1.jpg"><br>
 <br>
-<div style="text-align: left;">¨º»ò«e¶iªí¸Ó¦p¦ó«e¶i¡AÁ|­Ó¹ê»Úªº¨Ò¤l¡A¦pªG­n¦b¦r¦ê¤¤·j´MJUST³o­Ó¦r¦ê¡A«h¥i¯à¹J¨ìªº´X­Ó±¡ªp¦p¤U©Ò¥Ü¡G<br>
-<div style="text-align: center;"><img style="width: 364px; height: 367px;" alt="¦r¦ê®Ö¹ï" title="¦r¦ê®Ö¹ï" src="images/matchString-2.jpg"><br>
+<div style="text-align: left;">é‚£éº¼å‰é€²è¡¨è©²å¦‚ä½•å‰é€²ï¼Œèˆ‰å€‹å¯¦éš›çš„ä¾‹å­ï¼Œå¦‚æœè¦åœ¨å­—ä¸²ä¸­æœå°‹JUSTé€™å€‹å­—ä¸²ï¼Œå‰‡å¯èƒ½é‡åˆ°çš„å¹¾å€‹æƒ…æ³å¦‚ä¸‹æ‰€ç¤ºï¼š<br>
+<div style="text-align: center;"><img style="width: 364px; height: 367px;" alt="å­—ä¸²æ ¸å°" title="å­—ä¸²æ ¸å°" src="images/matchString-2.jpg"><br>
 <br>
 <br>
 </div>
 
-¨Ì·Ó³o­Ó¨Ò¤l¡A¥i¥H¨M©w¥X§Ú­Ìªº«e¶i­Èªí¦p¤U¡G <br>
+ä¾ç…§é€™å€‹ä¾‹å­ï¼Œå¯ä»¥æ±ºå®šå‡ºæˆ‘å€‘çš„å‰é€²å€¼è¡¨å¦‚ä¸‹ï¼š <br>
 <table style="text-align: left; height: 102px; width: 313px;" border="1" cellpadding="2" cellspacing="2">
   <tbody>
     <tr>
-      <td>¨ä¥¦</td>
+      <td>å…¶å®ƒ</td>
       <td>J</td>
       <td>U</td>
       <td>S</td>
@@ -72,22 +72,22 @@ Gossip@caterpillar</a></h3>
       <td>3</td>
       <td>2</td>
       <td>1</td>
-      <td>4¡]match?¡^</td>
+      <td>4ï¼ˆmatch?ï¼‰</td>
     </tr>
   </tbody>
 </table>
 <br>
 
-¦pªGÃöÁä¦r¤¤¦³­«½Æ¥X²{ªº¦r¤¸¡A«h«e¶i­È´N·|¦³¨â­Ó¥H¤Wªº­È¡A¦¹®É«h¨ú«e¶i­È¸û¤pªº­È¡A¦p¦¹´N¤£·|¸õ¹L¥i¯àªº¦ì¸m¡A¨Ò¦ptexture³o­ÓÃöÁä¦r¡Atªº«e
-¶i­ÈÀ³¸Ó¨ú«á­±ªº3¦Ó¤£¬O¨ú«e­±ªº7¡C<br>
-<h2> ¹ê§@</h2>
+å¦‚æœé—œéµå­—ä¸­æœ‰é‡è¤‡å‡ºç¾çš„å­—å…ƒï¼Œå‰‡å‰é€²å€¼å°±æœƒæœ‰å…©å€‹ä»¥ä¸Šçš„å€¼ï¼Œæ­¤æ™‚å‰‡å–å‰é€²å€¼è¼ƒå°çš„å€¼ï¼Œå¦‚æ­¤å°±ä¸æœƒè·³éå¯èƒ½çš„ä½ç½®ï¼Œä¾‹å¦‚textureé€™å€‹é—œéµå­—ï¼Œtçš„å‰
+é€²å€¼æ‡‰è©²å–å¾Œé¢çš„3è€Œä¸æ˜¯å–å‰é¢çš„7ã€‚<br>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C
   </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;string.h&gt; <br><br>void table(char*);  // «Ø¥ß«e¶iªí <br>int search(int, char*, char*); // ·j´MÃöÁä¦r <br>void substring(char*, char*, int, int); // ¨ú¥X¤l¦r¦ê <br><br>int skip[256]; <br><br>int main(void) { <br>    char str_input[80]; <br>    char str_key[80]; <br>    char tmp[80] = {'\0'}; <br>    int m, n, p; <br><br>    printf("½Ğ¿é¤J¦r¦ê¡G"); <br>    gets(str_input); <br>    printf("½Ğ¿é¤J·j´MÃöÁä¦r¡G"); <br>    gets(str_key); <br><br>    m = strlen(str_input); // ­pºâ¦r¦êªø«× <br>    n = strlen(str_key); <br>    table(str_key);  <br>    p = search(n-1, str_input, str_key); <br><br>    while(p != -1) { <br>        substring(str_input, tmp, p, m); <br>        printf("%s\n", tmp); <br>        p = search(p+n+1, str_input, str_key); <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void table(char *key) { <br>    int k, n; <br><br>    n = strlen(key); <br><br>    for(k = 0; k &lt;= 255; k++) <br>        skip[k] = n; <br>    for(k = 0; k &lt; n - 1; k++) <br>        skip[key[k]] = n - k - 1; <br>} <br><br>int search(int p, char* input, char* key) { <br>    int i, m, n; <br>    char tmp[80] = {'\0'}; <br><br>    m = strlen(input); <br>    n = strlen(key); <br><br>    while(p &lt; m) { <br>        substring(input, tmp, p-n+1, p); <br>        <br>        if(!strcmp(tmp, key))  // ¤ñ¸û¨â¦r¦ê¬O§_¬Û¦P <br>           return p-n+1; <br>        p += skip[input[p]]; <br>    } <br><br>    return -1; <br>} <br><br>void substring(char *text, char* tmp, int s, int e) { <br>    int i, j; <br><br>    for(i = s, j = 0; i &lt;= e; i++, j++) <br>        tmp[j] = text[i]; <br><br>    tmp[j] = '\0'; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;string.h&gt; <br><br>void table(char*);  // å»ºç«‹å‰é€²è¡¨ <br>int search(int, char*, char*); // æœå°‹é—œéµå­— <br>void substring(char*, char*, int, int); // å–å‡ºå­å­—ä¸² <br><br>int skip[256]; <br><br>int main(void) { <br>    char str_input[80]; <br>    char str_key[80]; <br>    char tmp[80] = {'\0'}; <br>    int m, n, p; <br><br>    printf("è«‹è¼¸å…¥å­—ä¸²ï¼š"); <br>    gets(str_input); <br>    printf("è«‹è¼¸å…¥æœå°‹é—œéµå­—ï¼š"); <br>    gets(str_key); <br><br>    m = strlen(str_input); // è¨ˆç®—å­—ä¸²é•·åº¦ <br>    n = strlen(str_key); <br>    table(str_key);  <br>    p = search(n-1, str_input, str_key); <br><br>    while(p != -1) { <br>        substring(str_input, tmp, p, m); <br>        printf("%s\n", tmp); <br>        p = search(p+n+1, str_input, str_key); <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void table(char *key) { <br>    int k, n; <br><br>    n = strlen(key); <br><br>    for(k = 0; k &lt;= 255; k++) <br>        skip[k] = n; <br>    for(k = 0; k &lt; n - 1; k++) <br>        skip[key[k]] = n - k - 1; <br>} <br><br>int search(int p, char* input, char* key) { <br>    int i, m, n; <br>    char tmp[80] = {'\0'}; <br><br>    m = strlen(input); <br>    n = strlen(key); <br><br>    while(p &lt; m) { <br>        substring(input, tmp, p-n+1, p); <br>        <br>        if(!strcmp(tmp, key))  // æ¯”è¼ƒå…©å­—ä¸²æ˜¯å¦ç›¸åŒ <br>           return p-n+1; <br>        p += skip[input[p]]; <br>    } <br><br>    return -1; <br>} <br><br>void substring(char *text, char* tmp, int s, int e) { <br>    int i, j; <br><br>    for(i = s, j = 0; i &lt;= e; i++, j++) <br>        tmp[j] = text[i]; <br><br>    tmp[j] = '\0'; <br>} <br></pre>
 
 <br>
 
@@ -96,7 +96,7 @@ Gossip@caterpillar</a></h3>
   </li>
 </ul>
 
-<pre>import java.io.BufferedReader;<br>import java.io.IOException;<br>import java.io.InputStreamReader;<br><br>public class StringMatch {<br>    private int[] skip;<br>    private int p;<br>    private String str;<br>    private String key;<br>    <br>    public StringMatch(String key) {<br>        skip = new int[256];<br>        this.key = key;<br>        <br>        for(int k = 0; k &lt;= 255; k++) <br>            skip[k] = key.length(); <br>        for(int k = 0; k &lt; key.length() - 1; k++) <br>            skip[key.charAt(k)] = key.length() - k - 1; <br>    }<br>    <br>    public void search(String str) {<br>        this.str = str;<br>        p = search(key.length()-1, str, key);<br>    }<br>    <br>    private int search(int p, String input, String key) {   <br>        while(p &lt; input.length()) { <br>            String tmp = input.substring(<br>                                p-key.length()+1, p+1); <br><br>            if(tmp.equals(key))  // ¤ñ¸û¨â¦r¦ê¬O§_¬Û¦P <br>               return p-key.length()+1; <br>            p += skip[input.charAt(p)]; <br>        } <br><br>        return -1; <br>    }<br>    <br>    public boolean hasNext() {<br>        return (p != -1);<br>    }<br>    <br>    public String next() {<br>        String tmp = str.substring(p);<br>        p = search(p+key.length()+1, str, key);<br>        return tmp;<br>    }<br>    <br>    public static void main(String[] args) <br>                                      throws IOException {<br>        BufferedReader bufReader = <br>            new BufferedReader(<br>                    new InputStreamReader(System.in));<br>        <br>        System.out.print("½Ğ¿é¤J¦r¦ê¡G");<br>        String str = bufReader.readLine();<br>        System.out.print("½Ğ¿é¤J·j´MÃöÁä¦r¡G"); <br>        String key = bufReader.readLine();<br>        <br>        StringMatch strMatch = new StringMatch(key);<br>        strMatch.search(str);<br><br>        while(strMatch.hasNext()) { <br>            System.out.println(strMatch.next()); <br>        } <br>    }<br>} </pre>
+<pre>import java.io.BufferedReader;<br>import java.io.IOException;<br>import java.io.InputStreamReader;<br><br>public class StringMatch {<br>    private int[] skip;<br>    private int p;<br>    private String str;<br>    private String key;<br>    <br>    public StringMatch(String key) {<br>        skip = new int[256];<br>        this.key = key;<br>        <br>        for(int k = 0; k &lt;= 255; k++) <br>            skip[k] = key.length(); <br>        for(int k = 0; k &lt; key.length() - 1; k++) <br>            skip[key.charAt(k)] = key.length() - k - 1; <br>    }<br>    <br>    public void search(String str) {<br>        this.str = str;<br>        p = search(key.length()-1, str, key);<br>    }<br>    <br>    private int search(int p, String input, String key) {   <br>        while(p &lt; input.length()) { <br>            String tmp = input.substring(<br>                                p-key.length()+1, p+1); <br><br>            if(tmp.equals(key))  // æ¯”è¼ƒå…©å­—ä¸²æ˜¯å¦ç›¸åŒ <br>               return p-key.length()+1; <br>            p += skip[input.charAt(p)]; <br>        } <br><br>        return -1; <br>    }<br>    <br>    public boolean hasNext() {<br>        return (p != -1);<br>    }<br>    <br>    public String next() {<br>        String tmp = str.substring(p);<br>        p = search(p+key.length()+1, str, key);<br>        return tmp;<br>    }<br>    <br>    public static void main(String[] args) <br>                                      throws IOException {<br>        BufferedReader bufReader = <br>            new BufferedReader(<br>                    new InputStreamReader(System.in));<br>        <br>        System.out.print("è«‹è¼¸å…¥å­—ä¸²ï¼š");<br>        String str = bufReader.readLine();<br>        System.out.print("è«‹è¼¸å…¥æœå°‹é—œéµå­—ï¼š"); <br>        String key = bufReader.readLine();<br>        <br>        StringMatch strMatch = new StringMatch(key);<br>        strMatch.search(str);<br><br>        while(strMatch.hasNext()) { <br>            System.out.println(strMatch.next()); <br>        } <br>    }<br>} </pre>
 <br>
 <br>
 </div>
