--- a/AlgorithmGossip/LongPI.htm
+++ b/AlgorithmGossip/LongPI.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>ªø PI</title>
+  <title>é•· PI</title>
 </head>
 
 
@@ -51,18 +51,18 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ªø PI</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: é•· PI</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-¶ê©P²v«áªº¤p¼Æ¦ì¼Æ¬OµL¤î¹Òªº¡A¦p¦ó¨Ï¥Î¹q¸£¨Ó­pºâ³oµL¤î¹Òªº¤p¼Æ¬O¤@¨Ç¼Æ¾Ç®a»Pµ{¦¡³]­p®v©Ò·P¿³½ìªº¡A¦b³oÃä¤¶²Ğ¤@­Ó¤½¦¡°t¦X <a href="BigNumber.htm">¤j¼Æ¹Bºâ</a>¡A¥i¥H­pºâ«ü©w¦ì¼Æªº¶ê©P²v¡C<br>
+åœ“å‘¨ç‡å¾Œçš„å°æ•¸ä½æ•¸æ˜¯ç„¡æ­¢å¢ƒçš„ï¼Œå¦‚ä½•ä½¿ç”¨é›»è…¦ä¾†è¨ˆç®—é€™ç„¡æ­¢å¢ƒçš„å°æ•¸æ˜¯ä¸€äº›æ•¸å­¸å®¶èˆ‡ç¨‹å¼è¨­è¨ˆå¸«æ‰€æ„Ÿèˆˆè¶£çš„ï¼Œåœ¨é€™é‚Šä»‹ç´¹ä¸€å€‹å…¬å¼é…åˆ <a href="BigNumber.htm">å¤§æ•¸é‹ç®—</a>ï¼Œå¯ä»¥è¨ˆç®—æŒ‡å®šä½æ•¸çš„åœ“å‘¨ç‡ã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-­º¥ı¤¶²ĞJ.Marchinªº¶ê©P²v¤½¦¡¡G<br>
+é¦–å…ˆä»‹ç´¹J.Marchinçš„åœ“å‘¨ç‡å…¬å¼ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">PI = [16/5 - 16 / (3*5<sup>3</sup>) + 16 / (5*5<sup>5</sup>) - 16 / (7*5<sup>7</sup>) + ......] -</span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -72,7 +72,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¥i¥H±N³o­Ó¤½¦¡¾ã²z¬°¡G<br>
+å¯ä»¥å°‡é€™å€‹å…¬å¼æ•´ç†ç‚ºï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">PI = [16/5 - 4/239] - [16/(5<sup>3</sup>) - 4/(239<sup>3</sup>)]/3+ [16/(5<sup>5</sup>) - 4/(239<sup>5</sup>)]/5 + ......</span><br>
 
@@ -80,7 +80,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¤]´N¬O»¡²Än¶µ¡A­Y¬°©_¼Æ«h¬°¥¿¼Æ¡A¬°°¸¼Æ«h¬°­t¼Æ¡A¦Ó¶µ¼Æªí¥Ü¤è¦¡¬°¡G<br>
+ä¹Ÿå°±æ˜¯èªªç¬¬né …ï¼Œè‹¥ç‚ºå¥‡æ•¸å‰‡ç‚ºæ­£æ•¸ï¼Œç‚ºå¶æ•¸å‰‡ç‚ºè² æ•¸ï¼Œè€Œé …æ•¸è¡¨ç¤ºæ–¹å¼ç‚ºï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">[16/5<sup>2*n-1</sup> - 4/239<sup>2*n-1</sup>] / (2*n-1)</span><br>
 
@@ -88,7 +88,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¦pªG§Ú­Ì­n­pºâ¶ê©P²v¦Ü10ªº­tL¦¸¤è¡A¥Ñ©ó[16/5<sup>2*n-1</sup> - 4/239<sup>2*n-1</sup>]¤¤16/5<sup>2*n-1</sup>¤ñ4/239<sup>2*n-1</sup>¨Óªº¤j¡A¨ã¦³¨M©w©Ê¡A©Ò¥Hªí¥Ü¦Ü¤Ö¥²¶·­pºâ¦Ü²Än¶µ¡G<br>
+å¦‚æœæˆ‘å€‘è¦è¨ˆç®—åœ“å‘¨ç‡è‡³10çš„è² Læ¬¡æ–¹ï¼Œç”±æ–¼[16/5<sup>2*n-1</sup> - 4/239<sup>2*n-1</sup>]ä¸­16/5<sup>2*n-1</sup>æ¯”4/239<sup>2*n-1</sup>ä¾†çš„å¤§ï¼Œå…·æœ‰æ±ºå®šæ€§ï¼Œæ‰€ä»¥è¡¨ç¤ºè‡³å°‘å¿…é ˆè¨ˆç®—è‡³ç¬¬né …ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">[16/5<sup>2*n-1</sup> ] / (2*n-1) = 10<sup>-L</sup></span><br>
 
@@ -96,7 +96,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-±N¤W­±ªºµ¥¦¡¨úlog¨Ã¸g¹L¤ÆÂ²¡A§Ú­Ì¥i¥H¨D±o¡G<br>
+å°‡ä¸Šé¢çš„ç­‰å¼å–logä¸¦ç¶“éåŒ–ç°¡ï¼Œæˆ‘å€‘å¯ä»¥æ±‚å¾—ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">n = L / (2log5) = L / 1.39794</span><br>
 
@@ -104,7 +104,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-©Ò¥H­Y­n¨Dºë½T«×¦Ü¤p¼Æ«áL¦ì¼Æ¡A«h¥u­n¨D¦Ü¤½¦¡ªº²Än¶µ¡A¨ä¤¤nµ¥©ó¡G<br>
+æ‰€ä»¥è‹¥è¦æ±‚ç²¾ç¢ºåº¦è‡³å°æ•¸å¾ŒLä½æ•¸ï¼Œå‰‡åªè¦æ±‚è‡³å…¬å¼çš„ç¬¬né …ï¼Œå…¶ä¸­nç­‰æ–¼ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">n = [L/1.39794] + 1</span><br>
 
@@ -112,7 +112,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-¦b¤W¦¡¤¤[]¬°°ª´µ²Å¸¹¡A¤]´N¬O¨ú¦Ü¾ã¼Æ¡]¤£¤j©óL/1.39794ªº¾ã¼Æ¡^¡F¬°¤F­pÂ²¤è«K¡A¥i¥H¦bµ{¦¡¤¤¨Ï¥Î¤U­±³o­Ó¤½¦¡¨Ó­pÂ²²Än¶µ¡G<br>
+åœ¨ä¸Šå¼ä¸­[]ç‚ºé«˜æ–¯ç¬¦è™Ÿï¼Œä¹Ÿå°±æ˜¯å–è‡³æ•´æ•¸ï¼ˆä¸å¤§æ–¼L/1.39794çš„æ•´æ•¸ï¼‰ï¼›ç‚ºäº†è¨ˆç°¡æ–¹ä¾¿ï¼Œå¯ä»¥åœ¨ç¨‹å¼ä¸­ä½¿ç”¨ä¸‹é¢é€™å€‹å…¬å¼ä¾†è¨ˆç°¡ç¬¬né …ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">[</span><big style="font-weight: bold; font-family: Courier New,Courier,monospace;">W</big><span style="font-weight: bold; font-family: Courier New,Courier,monospace;"><sub>n</sub>-1/5</span><sup style="font-weight: bold; font-family: Courier New,Courier,monospace;">2</sup><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">- </span><big style="font-weight: bold; font-family: Courier New,Courier,monospace;">V</big><span style="font-weight: bold; font-family: Courier New,Courier,monospace;"><sub>n</sub>-1 / (239</span><sup style="font-weight: bold; font-family: Courier New,Courier,monospace;">2</sup><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">)] / (2*n-1)</span><br>
 
@@ -120,7 +120,7 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-³o­Ó¤½¦¡ªººtºâªk°t¦X¤j¼Æ¹Bºâ¨ç¦¡ªººtºâªk¬°¡G
+é€™å€‹å…¬å¼çš„æ¼”ç®—æ³•é…åˆå¤§æ•¸é‹ç®—å‡½å¼çš„æ¼”ç®—æ³•ç‚ºï¼š
 <div style="margin-left: 40px; font-weight: bold;"><span style="font-family: Courier New,Courier,monospace;">div(w, 25, w); </span><br style="font-family: Courier New,Courier,monospace;">
 <span style="font-family: Courier New,Courier,monospace;">
 div(v, 239, v); </span><br style="font-family: Courier New,Courier,monospace;">
@@ -135,16 +135,16 @@ div(q, 2*k-1, q) </span><br>
 
 &nbsp;<br>
 
-¦Ü©ó¤j¼Æ¹Bºâªººtºâªk¡A½Ğ°Ñ¦Ò¤§«eªº¤å³¹¡A¥²¶·ª`·Nªº¬O¦b¿é¥X®É¡A¥Ñ©ó¬O¿é¥X°}¦C¤¤ªº¾ã¼Æ­È¡A¦pªG°}¦C¤¤¾ã¼Æ¦ì¼Æ¤£º¡¥|¦ì¡A«h¥²¶·¸É¤W0¡A¦bC»y¨¥¤¤¥u­n
-¨Ï¥Î®æ¦¡«ü©w¦r%04d¡A¨Ï±o¤£¨¬¦ì¼Æ³¡¥÷¦Û°Ê¸É¤W0¦A¿é¥X¡A¦Ü©óJavaªº³¡¥÷¡A¨Ï¥Î NumberFormat¨Ó§@®æ¦¡¤Æ¡C<br>
+è‡³æ–¼å¤§æ•¸é‹ç®—çš„æ¼”ç®—æ³•ï¼Œè«‹åƒè€ƒä¹‹å‰çš„æ–‡ç« ï¼Œå¿…é ˆæ³¨æ„çš„æ˜¯åœ¨è¼¸å‡ºæ™‚ï¼Œç”±æ–¼æ˜¯è¼¸å‡ºé™£åˆ—ä¸­çš„æ•´æ•¸å€¼ï¼Œå¦‚æœé™£åˆ—ä¸­æ•´æ•¸ä½æ•¸ä¸æ»¿å››ä½ï¼Œå‰‡å¿…é ˆè£œä¸Š0ï¼Œåœ¨Cèªè¨€ä¸­åªè¦
+ä½¿ç”¨æ ¼å¼æŒ‡å®šå­—%04dï¼Œä½¿å¾—ä¸è¶³ä½æ•¸éƒ¨ä»½è‡ªå‹•è£œä¸Š0å†è¼¸å‡ºï¼Œè‡³æ–¼Javaçš„éƒ¨ä»½ï¼Œä½¿ç”¨ NumberFormatä¾†ä½œæ ¼å¼åŒ–ã€‚<br>
 
 <br>
 
-±z¥i¥H°Ñ¦Ò <a href="http://crd.lbl.gov/%7Edhbailey/">³o­Óºô¯¸</a> ¦³Ãö©ó¥t¤@­Ó¥Î¤½¦¡¨DPIªº»¡©ú¡A¥¦ªº¹ê§@¦b <a href="http://crd.lbl.gov/%7Edhbailey/piqp.c">³oÃä</a>¡C<br>
+æ‚¨å¯ä»¥åƒè€ƒ <a href="http://crd.lbl.gov/%7Edhbailey/">é€™å€‹ç¶²ç«™</a> æœ‰é—œæ–¼å¦ä¸€å€‹ç”¨å…¬å¼æ±‚PIçš„èªªæ˜ï¼Œå®ƒçš„å¯¦ä½œåœ¨ <a href="http://crd.lbl.gov/%7Edhbailey/piqp.c">é€™é‚Š</a>ã€‚<br>
 
 <br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -155,7 +155,7 @@ div(q, 2*k-1, q) </span><br>
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#define L 1000 <br>#define N L/4+1 <br><br>// L ¬°¦ì¼Æ¡AN¬Oarrayªø«× <br><br>void add(int*, int*, int*); <br>void sub(int*, int*, int*); <br>void div(int*, int, int*); <br><br>int main(void) { <br>    int s[N+3] = {0}; <br>    int w[N+3] = {0}; <br>    int v[N+3] = {0}; <br>    int q[N+3] = {0}; <br>    int n = (int)(L/1.39793 + 1); <br>    int k; <br><br>    w[0] = 16*5; <br>    v[0] = 4*239; <br><br>    for(k = 1; k &lt;= n; k++) { <br>        // ®M¥Î¤½¦¡ <br>        div(w, 25, w); <br>        div(v, 239, v); <br>        div(v, 239, v); <br>        sub(w, v, q); <br>        div(q, 2*k-1, q); <br><br>        if(k%2) // ©_¼Æ¶µ <br>            add(s, q, s); <br>        else    // °¸¼Æ¶µ <br>            sub(s, q, s); <br>    } <br><br>    printf("%d.", s[0]); <br>    for(k = 1; k &lt; N; k++) <br>        printf("%04d", s[k]); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void add(int *a, int *b, int *c) { <br>    int i, carry = 0; <br><br>    for(i = N+1; i &gt;= 0; i--) { <br>        c[i] = a[i] + b[i] + carry; <br>        if(c[i] &lt; 10000) <br>            carry = 0; <br>        else { // ¶i¦ì <br>            c[i] = c[i] - 10000; <br>            carry = 1; <br>        } <br>    } <br>} <br><br>void sub(int *a, int *b, int *c) { <br>    int i, borrow = 0; <br><br>    for(i = N+1; i &gt;= 0; i--) { <br>        c[i] = a[i] - b[i] - borrow; <br>        if(c[i] &gt;= 0) <br>            borrow = 0; <br>        else { // ­É¦ì <br>            c[i] = c[i] + 10000; <br>            borrow = 1; <br>        } <br>    } <br>} <br><br>void div(int *a, int b, int *c) {  // b ¬°°£¼Æ <br>    int i, tmp, remain = 0; <br><br>    for(i = 0; i &lt;= N+1; i++) { <br>        tmp = a[i] + remain; <br>        c[i] = tmp / b; <br>        remain = (tmp % b) * 10000; <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#define L 1000 <br>#define N L/4+1 <br><br>// L ç‚ºä½æ•¸ï¼ŒNæ˜¯arrayé•·åº¦ <br><br>void add(int*, int*, int*); <br>void sub(int*, int*, int*); <br>void div(int*, int, int*); <br><br>int main(void) { <br>    int s[N+3] = {0}; <br>    int w[N+3] = {0}; <br>    int v[N+3] = {0}; <br>    int q[N+3] = {0}; <br>    int n = (int)(L/1.39793 + 1); <br>    int k; <br><br>    w[0] = 16*5; <br>    v[0] = 4*239; <br><br>    for(k = 1; k &lt;= n; k++) { <br>        // å¥—ç”¨å…¬å¼ <br>        div(w, 25, w); <br>        div(v, 239, v); <br>        div(v, 239, v); <br>        sub(w, v, q); <br>        div(q, 2*k-1, q); <br><br>        if(k%2) // å¥‡æ•¸é … <br>            add(s, q, s); <br>        else    // å¶æ•¸é … <br>            sub(s, q, s); <br>    } <br><br>    printf("%d.", s[0]); <br>    for(k = 1; k &lt; N; k++) <br>        printf("%04d", s[k]); <br>    <br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void add(int *a, int *b, int *c) { <br>    int i, carry = 0; <br><br>    for(i = N+1; i &gt;= 0; i--) { <br>        c[i] = a[i] + b[i] + carry; <br>        if(c[i] &lt; 10000) <br>            carry = 0; <br>        else { // é€²ä½ <br>            c[i] = c[i] - 10000; <br>            carry = 1; <br>        } <br>    } <br>} <br><br>void sub(int *a, int *b, int *c) { <br>    int i, borrow = 0; <br><br>    for(i = N+1; i &gt;= 0; i--) { <br>        c[i] = a[i] - b[i] - borrow; <br>        if(c[i] &gt;= 0) <br>            borrow = 0; <br>        else { // å€Ÿä½ <br>            c[i] = c[i] + 10000; <br>            borrow = 1; <br>        } <br>    } <br>} <br><br>void div(int *a, int b, int *c) {  // b ç‚ºé™¤æ•¸ <br>    int i, tmp, remain = 0; <br><br>    for(i = 0; i &lt;= N+1; i++) { <br>        tmp = a[i] + remain; <br>        c[i] = tmp / b; <br>        remain = (tmp % b) * 10000; <br>    } <br>} <br></pre>
 
 
 <br>
@@ -169,7 +169,7 @@ div(q, 2*k-1, q) </span><br>
 </ul>
 
 
-<pre>import java.text.NumberFormat;<br><br>public class LongPI {<br>    public static void main(String[] args) {<br>        final int L = 1000;<br>        final int N = L/4+1;<br>        int[] s = new int[N+3];<br>        int[] w = new int[N+3];<br>        int[] v = new int[N+3];<br>        int[] q = new int[N+3];<br><br>        int n = (int)(L/1.39793 + 1); <br>        <br>        w[0] = 16*5; <br>        v[0] = 4*239; <br>        <br>        for(int k = 1; k &lt;= n; k++) { <br>            // ®M¥Î¤½¦¡ <br>            w = BigNumber.div(w, 25); <br>            v = BigNumber.div(v, 239); <br>            v = BigNumber.div(v, 239);<br>            q = BigNumber.sub(w, v); <br>            q = BigNumber.div(q, 2*k-1); <br><br>            if(k % 2 == 1) // ©_¼Æ¶µ <br>                s = BigNumber.add(s, q); <br>            else    // °¸¼Æ¶µ <br>                s = BigNumber.sub(s, q);<br>        } <br>        <br>        NumberFormat nf = NumberFormat.getInstance();<br>        nf.setMinimumIntegerDigits(4);<br>        <br>        System.out.print(s[0] + "."); <br>        for(int k = 1; k &lt; N; k++) <br>            System.out.print(nf.format(s[k])); <br>        <br>        System.out.println(); <br>    }<br>}</pre>
+<pre>import java.text.NumberFormat;<br><br>public class LongPI {<br>    public static void main(String[] args) {<br>        final int L = 1000;<br>        final int N = L/4+1;<br>        int[] s = new int[N+3];<br>        int[] w = new int[N+3];<br>        int[] v = new int[N+3];<br>        int[] q = new int[N+3];<br><br>        int n = (int)(L/1.39793 + 1); <br>        <br>        w[0] = 16*5; <br>        v[0] = 4*239; <br>        <br>        for(int k = 1; k &lt;= n; k++) { <br>            // å¥—ç”¨å…¬å¼ <br>            w = BigNumber.div(w, 25); <br>            v = BigNumber.div(v, 239); <br>            v = BigNumber.div(v, 239);<br>            q = BigNumber.sub(w, v); <br>            q = BigNumber.div(q, 2*k-1); <br><br>            if(k % 2 == 1) // å¥‡æ•¸é … <br>                s = BigNumber.add(s, q); <br>            else    // å¶æ•¸é … <br>                s = BigNumber.sub(s, q);<br>        } <br>        <br>        NumberFormat nf = NumberFormat.getInstance();<br>        nf.setMinimumIntegerDigits(4);<br>        <br>        System.out.print(s[0] + "."); <br>        for(int k = 1; k &lt; N; k++) <br>            System.out.print(nf.format(s[k])); <br>        <br>        System.out.println(); <br>    }<br>}</pre>
 
 <br>
 
