--- a/AlgorithmGossip/LinearSearch.htm
+++ b/AlgorithmGossip/LinearSearch.htm
@@ -33,7 +33,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -44,7 +44,7 @@
   
   
   
-  <title>´`§Ç·j´Mªk¡]¨Ï¥Î½Ã§L¡^</title>
+  <title>å¾ªåºæœå°‹æ³•ï¼ˆä½¿ç”¨è¡›å…µï¼‰</title>
 </head>
 
 
@@ -61,25 +61,25 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;´`§Ç·j´Mªk¡]¨Ï¥Î½Ã§L¡^</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;å¾ªåºæœå°‹æ³•ï¼ˆä½¿ç”¨è¡›å…µï¼‰</a></h1>
 
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-·j´Mªº¥Øªº¡A¬O¦b¡u¤w±Æ§Çªº¸ê®Æ¡v¤¤´M§ä«ü©wªº¸ê®Æ¡A¦Ó·í¤¤´`§Ç·j´M¬O³Ì°ò¥»ªº·j´Mªk¡A¥u­n±q¸ê®Æ¶}ÀY´M§ä¨ì³Ì«á¡A¬İ¬İ¬O§_§ä¨ì¸ê®Æ§Y¥i¡C<br>
+æœå°‹çš„ç›®çš„ï¼Œæ˜¯åœ¨ã€Œå·²æ’åºçš„è³‡æ–™ã€ä¸­å°‹æ‰¾æŒ‡å®šçš„è³‡æ–™ï¼Œè€Œç•¶ä¸­å¾ªåºæœå°‹æ˜¯æœ€åŸºæœ¬çš„æœå°‹æ³•ï¼Œåªè¦å¾è³‡æ–™é–‹é ­å°‹æ‰¾åˆ°æœ€å¾Œï¼Œçœ‹çœ‹æ˜¯å¦æ‰¾åˆ°è³‡æ–™å³å¯ã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-ªì¾ÇªÌ¬İ¨ì´`§Ç·j´M¡A¦h¼Æ³£·|¨Ï¥Î¥H¤Uªº¤è¦¡¨Ó¶i¦æ·j´M¡G<br>
+åˆå­¸è€…çœ‹åˆ°å¾ªåºæœå°‹ï¼Œå¤šæ•¸éƒ½æœƒä½¿ç”¨ä»¥ä¸‹çš„æ–¹å¼ä¾†é€²è¡Œæœå°‹ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">while(i &lt; MAX) { </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp; if(number[i] == k) { </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
-<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; printf("§ä¨ì«ü©w­È"); </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
+<span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; printf("æ‰¾åˆ°æŒ‡å®šå€¼"); </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
 <span style="font-weight: bold; font-family: Courier New,Courier,monospace;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; break; </span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -95,15 +95,15 @@ Gossip@caterpillar</a></h3>
 
 <br>
 
-³o­Ó¤èªk°ò¥»¤W¨S¦³¿ù¡A¦ı¬O¥i¥H¥[¥H§ïµ½¡A¥i¥H§Q¥Î³]©w½Ã§Lªº¤è¦¡¡A¬Ù¥hif§PÂ_¦¡¡A½Ã§L³q±`³]©w¦b¼Æ¦C³Ì«á©Î¬O³Ì«e¤è¡A°²³]³]©w¦b¦C«e¤è¦n¤F¡]¯Á¤Ş0ªº
-¦ì¸m¡^¡A§Ú­Ì±q¼Æ¦C«á¤è¦V«e§ä¡A¦pªG§ä¨ì«ü©wªº¸ê®Æ®É¡A¨ä¯Á¤Ş­È¤£¬O0¡Aªí¥Ü¦b¼Æ¦C¨«³X§¹¤§«e´N§ä¨ì¤F¡A¦bµ{¦¡ªº¼¶¼g¤W¡A¥u­n¨Ï¥Î¤@­Ówhile°j°é´N¥i
-¥H¤F¡C<br>
+é€™å€‹æ–¹æ³•åŸºæœ¬ä¸Šæ²’æœ‰éŒ¯ï¼Œä½†æ˜¯å¯ä»¥åŠ ä»¥æ”¹å–„ï¼Œå¯ä»¥åˆ©ç”¨è¨­å®šè¡›å…µçš„æ–¹å¼ï¼Œçœå»ifåˆ¤æ–·å¼ï¼Œè¡›å…µé€šå¸¸è¨­å®šåœ¨æ•¸åˆ—æœ€å¾Œæˆ–æ˜¯æœ€å‰æ–¹ï¼Œå‡è¨­è¨­å®šåœ¨åˆ—å‰æ–¹å¥½äº†ï¼ˆç´¢å¼•0çš„
+ä½ç½®ï¼‰ï¼Œæˆ‘å€‘å¾æ•¸åˆ—å¾Œæ–¹å‘å‰æ‰¾ï¼Œå¦‚æœæ‰¾åˆ°æŒ‡å®šçš„è³‡æ–™æ™‚ï¼Œå…¶ç´¢å¼•å€¼ä¸æ˜¯0ï¼Œè¡¨ç¤ºåœ¨æ•¸åˆ—èµ°è¨ªå®Œä¹‹å‰å°±æ‰¾åˆ°äº†ï¼Œåœ¨ç¨‹å¼çš„æ’°å¯«ä¸Šï¼Œåªè¦ä½¿ç”¨ä¸€å€‹whileè¿´åœˆå°±å¯
+ä»¥äº†ã€‚<br>
 
 <br>
 
-¤U­±ªºµ{¦¡¬°¤F°t¦X½Ã§Lªº³]¸m¡A¦Û¦æ¨Ï¥Î§Ö³t±Æ§Çªk¥ı±N²£¥Íªº¼Æ¦C±Æ§Ç¡AµM«á¤~¶i¦æ·j´M¡A­Y¥u¬O¼Æ¦rªº¸Ü¡A³q±`±z¥i¥H¨Ï¥Îµ{¦¡»y¨¥¨ç¦¡®w©Ò´£¨Ñªº·j´M¨ç¦¡¡C <br>
+ä¸‹é¢çš„ç¨‹å¼ç‚ºäº†é…åˆè¡›å…µçš„è¨­ç½®ï¼Œè‡ªè¡Œä½¿ç”¨å¿«é€Ÿæ’åºæ³•å…ˆå°‡ç”¢ç”Ÿçš„æ•¸åˆ—æ’åºï¼Œç„¶å¾Œæ‰é€²è¡Œæœå°‹ï¼Œè‹¥åªæ˜¯æ•¸å­—çš„è©±ï¼Œé€šå¸¸æ‚¨å¯ä»¥ä½¿ç”¨ç¨‹å¼èªè¨€å‡½å¼åº«æ‰€æä¾›çš„æœå°‹å‡½å¼ã€‚ <br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -114,7 +114,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>int search(int[]); <br>int partition(int[], int, int); <br>void quicksort(int[], int, int); <br><br>int main(void) { <br>    int number[MAX+1] = {0}; <br>    int i, find; <br><br>    srand(time(NULL)); <br><br>    for(i = 1; i &lt;= MAX; i++) <br>        number[i] = rand() % 100; <br><br>    quicksort(number, 1, MAX); <br><br>    printf("¼Æ¦C¡G"); <br>    for(i = 1; i &lt;= MAX; i++) <br>        printf("%d ", number[i]); <br>    <br>    printf("\n¿é¤J·j´M­È¡G"); <br>    scanf("%d", &amp;number[0]); <br><br>    if(find = search(number)) <br>        printf("\n§ä¨ì¼Æ­È©ó¯Á¤Ş %d ", find); <br>    else <br>        printf("\n§ä¤£¨ì¼Æ­È"); <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>int search(int number[]) { <br>    int i, k; <br>    <br>    k = number[0]; <br>    i = MAX; <br>    <br>    while(number[i] != k) <br>        i--; <br><br>    return i; <br>} <br><br>int partition(int number[], int left, int right) { <br>    int i, j, s; <br><br>    s = number[right]; <br>    i = left - 1; <br><br>    for(j = left; j &lt; right; j++) { <br>        if(number[j] &lt;= s) { <br>            i++; <br>            SWAP(number[i], number[j]); <br>        } <br>    } <br><br>    SWAP(number[i+1], number[right]); <br>    return i+1; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int q; <br><br>    if(left &lt; right) { <br>        q = partition(number, left, right); <br>        quicksort(number, left, q-1); <br>        quicksort(number, q+1, right); <br>    } <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#include &lt;time.h&gt; <br>#define MAX 10 <br>#define SWAP(x,y) {int t; t = x; x = y; y = t;} <br><br>int search(int[]); <br>int partition(int[], int, int); <br>void quicksort(int[], int, int); <br><br>int main(void) { <br>    int number[MAX+1] = {0}; <br>    int i, find; <br><br>    srand(time(NULL)); <br><br>    for(i = 1; i &lt;= MAX; i++) <br>        number[i] = rand() % 100; <br><br>    quicksort(number, 1, MAX); <br><br>    printf("æ•¸åˆ—ï¼š"); <br>    for(i = 1; i &lt;= MAX; i++) <br>        printf("%d ", number[i]); <br>    <br>    printf("\nè¼¸å…¥æœå°‹å€¼ï¼š"); <br>    scanf("%d", &amp;number[0]); <br><br>    if(find = search(number)) <br>        printf("\næ‰¾åˆ°æ•¸å€¼æ–¼ç´¢å¼• %d ", find); <br>    else <br>        printf("\næ‰¾ä¸åˆ°æ•¸å€¼"); <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>int search(int number[]) { <br>    int i, k; <br>    <br>    k = number[0]; <br>    i = MAX; <br>    <br>    while(number[i] != k) <br>        i--; <br><br>    return i; <br>} <br><br>int partition(int number[], int left, int right) { <br>    int i, j, s; <br><br>    s = number[right]; <br>    i = left - 1; <br><br>    for(j = left; j &lt; right; j++) { <br>        if(number[j] &lt;= s) { <br>            i++; <br>            SWAP(number[i], number[j]); <br>        } <br>    } <br><br>    SWAP(number[i+1], number[right]); <br>    return i+1; <br>} <br><br>void quicksort(int number[], int left, int right) { <br>    int q; <br><br>    if(left &lt; right) { <br>        q = partition(number, left, right); <br>        quicksort(number, left, q-1); <br>        quicksort(number, q+1, right); <br>    } <br>} <br></pre>
 
 
 <br>
@@ -128,7 +128,7 @@ Gossip@caterpillar</a></h3>
 </ul>
 
 
-<pre>public class LinearSearch {<br>    public static int search(int[] number, int des) {<br>        int[] tmp = new int[number.length + 1];<br>        <br>        for(int i = 1; i &lt; tmp.length; i++) {<br>            tmp[i] = number[i-1];  <br>        }<br>        <br>        tmp[0] = des;<br>        <br>        int k = tmp[0]; <br>        int i = number.length; <br>        <br>        while(tmp[i] != k) <br>            i--; <br><br>        return i - 1;    <br>    }<br>    <br>    public static void main(String[] args) {<br>        int[] number = {1, 4, 2, 6, 7, 3, 9, 8};<br>        <br>        QuickSort.sort(number);<br>        <br>        int find = LinearSearch.search(number, 3);<br>        <br>        if(find != 0) <br>            System.out.println("§ä¨ì¼Æ­È©ó¯Á¤Ş" + find); <br>        else <br>            System.out.println("§ä¤£¨ì¼Æ­È"); <br>    }<br>} </pre>
+<pre>public class LinearSearch {<br>    public static int search(int[] number, int des) {<br>        int[] tmp = new int[number.length + 1];<br>        <br>        for(int i = 1; i &lt; tmp.length; i++) {<br>            tmp[i] = number[i-1];  <br>        }<br>        <br>        tmp[0] = des;<br>        <br>        int k = tmp[0]; <br>        int i = number.length; <br>        <br>        while(tmp[i] != k) <br>            i--; <br><br>        return i - 1;    <br>    }<br>    <br>    public static void main(String[] args) {<br>        int[] number = {1, 4, 2, 6, 7, 3, 9, 8};<br>        <br>        QuickSort.sort(number);<br>        <br>        int find = LinearSearch.search(number, 3);<br>        <br>        if(find != 0) <br>            System.out.println("æ‰¾åˆ°æ•¸å€¼æ–¼ç´¢å¼•" + find); <br>        else <br>            System.out.println("æ‰¾ä¸åˆ°æ•¸å€¼"); <br>    }<br>} </pre>
 
 <br>
 
